--- a/iu_idsl_naese/pom.xml
+++ b/iu_idsl_naese/pom.xml
@@ -34,6 +34,17 @@
     </dependency>
 
     <dependency>
+      <groupId>org.apache.jena</groupId>
+      <artifactId>jena-core</artifactId>
+      <version>4.3.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.jena</groupId>
+      <artifactId>jena-arq</artifactId>
+      <version>4.3.1</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.servlets</groupId>
       <artifactId>cos</artifactId>
       <version>05Nov2002</version>
